<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:background="@color/targaryen_bg_main">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv2_cover_photo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="12dp"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            android:src="@drawable/targaryen_castle"
            app:shapeAppearanceOverlay="@style/curvedCard" />


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv2_profile_photo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@id/iv2_cover_photo"
            android:layout_marginStart="24dp"
            android:layout_marginTop="-70dp"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            android:src="@drawable/targaryen_sigil"
            app:shapeAppearanceOverlay="@style/circleImageView" />


        <TextView
            android:id="@+id/tv_house_title"
            style="@style/TextAppearance.Targaryen.HeaderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv2_profile_photo"
            android:layout_alignStart="@id/iv2_profile_photo"
            android:layout_marginTop="4dp"
            android:maxLines="1"
            android:text="@string/house_name" />

        <TextView
            android:id="@+id/tv_house_words"
            style="@style/TextAppearance.Targaryen.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_house_title"
            android:layout_alignStart="@id/iv2_profile_photo"
            android:text="@string/house_words"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_house_words"
            android:layout_marginTop="8dp"
            android:layout_alignStart="@id/iv2_cover_photo"
            android:layout_alignEnd="@id/iv2_cover_photo"
            android:backgroundTint="@color/targaryen_bg_card"
            app:strokeColor="@color/targaryen_card_stroke"
            app:strokeWidth="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="2sp"
                        android:layout_height="8dp"
                        android:layout_marginEnd="4dp"
                        android:background="@color/targaryen_red_bright" />

                    <TextView
                        style="@style/TextAppearance.Targaryen.CardHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/house_overview_title" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="8dp">

                    <TextView
                        style="@style/TextAppearance.Targaryen.InfoKey"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:maxLines="1"
                        android:text="@string/origin" />

                    <TextView
                        style="@style/TextAppearance.Targaryen.InfoValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/origin_value" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="8dp">

                    <TextView
                        style="@style/TextAppearance.Targaryen.InfoKey"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/founded" />

                    <TextView
                        style="@style/TextAppearance.Targaryen.InfoValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/founded_value" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="8dp">

                    <TextView
                        style="@style/TextAppearance.Targaryen.InfoKey"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/founder" />

                    <TextView
                        style="@style/TextAppearance.Targaryen.InfoValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/founder_value" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="8dp">

                    <TextView
                        style="@style/TextAppearance.Targaryen.InfoKey"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/status" />

                    <TextView
                        style="@style/TextAppearance.Targaryen.InfoValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status_value" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="8dp">

                    <TextView
                        style="@style/TextAppearance.Targaryen.InfoKey"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/seat" />

                    <TextView
                        style="@style/TextAppearance.Targaryen.InfoValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/seat_value" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextAppearance.Targaryen.InfoKey"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/region" />

                    <TextView
                        style="@style/TextAppearance.Targaryen.InfoValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/region_value" />
                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_info"
        android:backgroundTint="@color/targaryen_bg_card"
        app:strokeColor="@color/targaryen_card_stroke"
        android:layout_marginTop="8dp"
        android:layout_alignStart="@id/card_info"
        android:layout_alignEnd="@id/card_info"
        app:strokeWidth="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="2sp"
                    android:layout_height="8dp"
                    android:layout_marginEnd="4dp"
                    android:background="@color/targaryen_red_bright" />

                <TextView
                    style="@style/TextAppearance.Targaryen.CardHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description" />
            </LinearLayout>

            <TextView
                style="@style/TextAppearance.Targaryen.InfoValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/description_content"
                android:textAlignment="textStart"
                tools:targetApi="26" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>