<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/stark_bg_main">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv3_cover_photo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="12dp"
        android:scaleType="centerCrop"
        android:src="@drawable/stark_castle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/curvedCard" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv3_profile_photo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="24dp"
        android:scaleType="centerCrop"
        android:src="@drawable/stark_sigil"
        app:layout_constraintBottom_toBottomOf="@id/iv3_cover_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv3_cover_photo"
        app:shapeAppearanceOverlay="@style/circleImageView" />

    <TextView
        android:id="@+id/tv3_house_title"
        style="@style/TextAppearance.Stark.HeaderTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="House Stark"
        app:layout_constraintStart_toStartOf="@id/iv3_profile_photo"
        app:layout_constraintTop_toBottomOf="@id/iv3_profile_photo" />

    <TextView
        android:id="@+id/tv3_house_words"
        style="@style/TextAppearance.Stark.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Winter is Coming"
        app:layout_constraintStart_toStartOf="@id/iv3_profile_photo"
        app:layout_constraintTop_toBottomOf="@id/tv3_house_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/bg_stark_card"
        android:id="@+id/cv_info_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="@id/iv3_cover_photo"
        app:layout_constraintStart_toStartOf="@id/iv3_cover_photo"
        app:layout_constraintTop_toBottomOf="@id/tv3_house_words"
        app:strokeColor="@color/stark_card_stroke"
        app:strokeWidth="2dp">


        <TextView
            android:id="@+id/tv3_info_header"
            style="@style/TextAppearance.Stark.CardHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/house_overview_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv3_origin_key"
            style="@style/TextAppearance.Stark.InfoKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/origin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv3_info_header" />

        <TextView
            android:id="@+id/tv3_origin_value"
            style="@style/TextAppearance.Stark.InfoValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="North"
            app:layout_constraintBaseline_toBaselineOf="@id/tv3_origin_key"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv3_founded_key"
            style="@style/TextAppearance.Stark.InfoKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/founded"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv3_origin_key" />

        <TextView
            style="@style/TextAppearance.Stark.InfoValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Age of Heroes (8000 BC)"
            app:layout_constraintBaseline_toBaselineOf="@id/tv3_founded_key"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv3_founder_key"
            style="@style/TextAppearance.Stark.InfoKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/founder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv3_founded_key" />

        <TextView
            style="@style/TextAppearance.Stark.InfoValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bran the Builder"
            app:layout_constraintBaseline_toBaselineOf="@id/tv3_founder_key"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv3_seat_key"
            style="@style/TextAppearance.Stark.InfoKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/seat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv3_founder_key" />

        <TextView
            style="@style/TextAppearance.Stark.InfoValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Winterfell"
            app:layout_constraintBaseline_toBaselineOf="@id/tv3_seat_key"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv3_region_key"
            style="@style/TextAppearance.Stark.InfoKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/region"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv3_seat_key" />

        <TextView
            style="@style/TextAppearance.Stark.InfoValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="North"
            app:layout_constraintBaseline_toBaselineOf="@id/tv3_region_key"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@drawable/bg_stark_card"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="@id/cv_info_card"
        app:layout_constraintStart_toStartOf="@id/cv_info_card"
        app:layout_constraintTop_toBottomOf="@id/cv_info_card">


        <TextView
            android:id="@+id/tv3_description_header"
            style="@style/TextAppearance.Stark.CardHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/TextAppearance.Stark.InfoValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:justificationMode="inter_word"
            android:text="@string/description_content_stark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv3_description_header" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>